Add automated tests for oscar_demos tabs

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,3 +1,4 @@
 add_subdirectory(TestOpenSimCreator)
 add_subdirectory(testoscar)
+add_subdirectory(testoscar_demos)
 add_subdirectory(testoscar_learnopengl)
