Reduce #includes and usings in democode

--- a/src/oscar_demos/CMakeLists.txt
+++ b/src/oscar_demos/CMakeLists.txt
@@ -18,6 +18,7 @@ add_library(oscar_demos STATIC
     MeshGenTestTab.hpp
     OscarDemosTabRegistry.cpp
     OscarDemosTabRegistry.hpp
+    OscarDemoTabs.hpp
     SubMeshTab.cpp
     SubMeshTab.hpp
 )
