--- a/src/oscar_learnopengl/CMakeLists.txt
+++ b/src/oscar_learnopengl/CMakeLists.txt
@@ -57,6 +57,7 @@ add_library(oscar_learnopengl STATIC
     LearnOpenGLHelpers.hpp
     LearnOpenGLTabRegistry.cpp
     LearnOpenGLTabRegistry.hpp
+    LearnOpenGLTabs.hpp
     MouseCapturingCamera.hpp
 )
 
