Drop .frames support from model warper (StationDefinedFrame covers this)

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(testoscar
 
     Maths/TestAngle.cpp
     Maths/TestBVH.cpp
+    Maths/TestFrameAxis.cpp
     Maths/TestUnitVec.cpp
 
     MetaTests/TestFormatsHeader.cpp
