Add virtual interfaces for model warping

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -139,6 +139,8 @@ add_library(oscar STATIC
     Graphics/VertexFormat.cpp
     Graphics/VertexFormat.h
 
+    Interfaces/ICloneable.h
+
     Maths/AABB.h
     Maths/Angle.h
     Maths/BVH.h
@@ -342,6 +344,7 @@ add_library(oscar STATIC
     DOM.h
     Formats.h
     Graphics.h
+    Interfaces.h
     Maths.h
     oscar.h
     Platform.h
