--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -108,6 +108,8 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/Document.h
     Documents/ModelWarper/FrameWarpLookup.cpp
     Documents/ModelWarper/FrameWarpLookup.h
+    Documents/ModelWarper/IFrameWarp.h
+    Documents/ModelWarper/IMeshWarp.h
     Documents/ModelWarper/LandmarkPairing.h
     Documents/ModelWarper/MeshWarpLookup.cpp
     Documents/ModelWarper/MeshWarpLookup.h
