--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -107,10 +107,12 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/Document.h
     Documents/ModelWarper/FrameWarpLookup.cpp
     Documents/ModelWarper/FrameWarpLookup.h
+    Documents/ModelWarper/ICloneable.h
     Documents/ModelWarper/IDetailListable.h
     Documents/ModelWarper/IFrameWarp.h
     Documents/ModelWarper/IMeshWarp.h
-    Documents/ModelWarper/IValidationCheckable.h
+    Documents/ModelWarper/IValidateable.cpp
+    Documents/ModelWarper/IValidateable.h
     Documents/ModelWarper/LandmarkPairing.h
     Documents/ModelWarper/MeshWarpLookup.cpp
     Documents/ModelWarper/MeshWarpLookup.h
@@ -119,7 +121,6 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/ThinPlateSplineMeshWarp.cpp
     Documents/ModelWarper/ThinPlateSplineMeshWarp.h
     Documents/ModelWarper/ValidationCheck.h
-    Documents/ModelWarper/ValidationCheckConsumerResponse.h
     Documents/ModelWarper/WarpDetail.h
 
     Documents/Simulation/ForwardDynamicSimulation.cpp
