Refactor model warping UI to emit frame details/validations

--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -122,6 +122,7 @@ add_library(OpenSimCreator STATIC
     Documents/ModelWarper/ThinPlateSplineMeshWarp.h
     Documents/ModelWarper/ValidationCheck.h
     Documents/ModelWarper/ValidationState.h
+    Documents/ModelWarper/WarpableOpenSimComponent.h
     Documents/ModelWarper/WarpDetail.h
 
     Documents/Simulation/ForwardDynamicSimulation.cpp
