Implement smooth shading for SimTK meshes (+recalculateNormals)

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -353,7 +353,7 @@ add_library(oscar STATIC
     UI.h
     Utils.h
     Variant.h
- )
+   "Graphics/Blender/BlenderStyleMesh.h")
 
 target_include_directories(oscar PUBLIC
 
