--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -221,6 +221,7 @@ add_library(oscar STATIC
     Shims/Cpp20/bit.h
     Shims/Cpp20/stop_token.h
     Shims/Cpp20/thread.h
+    Shims/Cpp23/cstddef.h
     Shims/Cpp23/utility.h
 
     UI/Panels/IPanel.h
