--- a/src/OpenSimCreator/CMakeLists.txt
+++ b/src/OpenSimCreator/CMakeLists.txt
@@ -285,6 +285,8 @@ add_library(OpenSimCreator STATIC
     UI/ModelWarper/MainMenu.h
     UI/ModelWarper/ModelWarperTab.cpp
     UI/ModelWarper/ModelWarperTab.h
+    UI/ModelWarper/ModelWarperUIHelpers.cpp
+    UI/ModelWarper/ModelWarperUIHelpers.h
     UI/ModelWarper/ResultModelViewerPanel.cpp
     UI/ModelWarper/ResultModelViewerPanel.h
     UI/ModelWarper/SourceModelViewerPanel.cpp
