Refactor various little bits of maths functions

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -154,6 +154,7 @@ add_library(oscar STATIC
     Maths/EulerPerspectiveCamera.h
     Maths/Eulers.h
     Maths/FrameAxis.h
+    Maths/Functors.h
     Maths/GeometricFunctions.h
     Maths/Line.h
     Maths/Mat.h
