Refactor transform functions into its own header

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -175,6 +175,7 @@ add_library(oscar STATIC
     Maths/Sphere.h
     Maths/Tetrahedron.h
     Maths/Transform.h
+    Maths/TransformFunctions.h
     Maths/Triangle.h
     Maths/TriangleFunctions.h
     Maths/TrigonometricFunctions.h
