Refactor axes widget into its own CameraViewAxes class

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -255,6 +255,8 @@ add_library(oscar STATIC
     UI/Tabs/TabRegistry.h
     UI/Tabs/TabRegistryEntry.cpp
     UI/Tabs/TabRegistryEntry.h
+    UI/Widgets/CameraViewAxes.cpp
+    UI/Widgets/CameraViewAxes.h
     UI/Widgets/GuiRuler.cpp
     UI/Widgets/GuiRuler.h
     UI/Widgets/IconWithMenu.cpp
