Add basic tests for some mesh generators and fix Mesh attribute edge-case

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(testoscar
     Graphics/TestCullMode.cpp
     Graphics/TestSubMeshDescriptor.cpp
     Graphics/TestMesh.cpp
+    Graphics/TestMeshGenerators.cpp
     Graphics/TestMeshUpdateFlags.cpp
     Graphics/TestRenderer.cpp
     Graphics/TestRenderTarget.cpp
