Rewrite osc::Ellipsoid with Quat orientation instead of axis directions

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -152,6 +152,7 @@ add_library(oscar STATIC
     Maths/Disc.h
     Maths/EasingFunctions.h
     Maths/Ellipsoid.h
+    Maths/EllipsoidFunctions.h
     Maths/EulerPerspectiveCamera.h
     Maths/Eulers.h
     Maths/FrameAxis.h
