--- a/src/oscar_compiler_configuration/CMakeLists.txt
+++ b/src/oscar_compiler_configuration/CMakeLists.txt
@@ -62,7 +62,7 @@ target_compile_options(oscar_compiler_configuration INTERFACE
         # warn if an uninitialized variable is initialized by itself
         -Winit-self
 
-        # warn if data is casted to a higher alignment (e.g. char -> int64_t)
+        # warn if data is casted to a higher alignment (e.g. char -> long)
         #
         # (set to =strict if the code quality is high enough and Clang in CI is high enough)
         -Wcast-align
