--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,4 +2,6 @@ add_subdirectory(oscar_compiler_configuration)
 add_subdirectory(oscar)
 add_subdirectory(oscar_demos)
 add_subdirectory(oscar_learnopengl)
-add_subdirectory(OpenSimCreator)
+if (${OSC_BUILD_OPENSIMCREATOR})
+    add_subdirectory(OpenSimCreator)
+endif()
