--- a/tests/testoscar_learnopengl/CMakeLists.txt
+++ b/tests/testoscar_learnopengl/CMakeLists.txt
@@ -29,7 +29,9 @@ target_link_libraries(testoscar_learnopengl PUBLIC
 )
 
 # tell CMake (+IDEs) how to find all tests
-gtest_discover_tests(testoscar_learnopengl)
+if(${OSC_DISCOVER_TESTS})
+    gtest_discover_tests(testoscar_learnopengl)
+endif()
 
 # for development on Windows, copy all runtime dlls to the exe directory
 # (because Windows doesn't have an RPATH)
