--- a/tests/TestOpenSimCreator/CMakeLists.txt
+++ b/tests/TestOpenSimCreator/CMakeLists.txt
@@ -11,6 +11,7 @@ add_executable(TestOpenSimCreator
     Documents/ModelWarper/TestCachedModelWarper.cpp
     Documents/ModelWarper/TestDocument.cpp
     Documents/ModelWarper/TestFrameDefinitionLookup.cpp
+    Documents/ModelWarper/TestInMemoryMesh.cpp
     Documents/ModelWarper/TestMeshWarpLookup.cpp
     Documents/Simulation/TestForwardDynamicSimulation.cpp
     Graphics/TestOpenSimDecorationGenerator.cpp
