Refactor into TetrahedronGeometry

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -65,6 +65,8 @@ add_library(oscar STATIC
     Graphics/Geometries/OctahedronGeometry.h
     Graphics/Geometries/PolyhedronGeometry.cpp
     Graphics/Geometries/PolyhedronGeometry.h
+    Graphics/Geometries/TetrahedronGeometry.cpp
+    Graphics/Geometries/TetrahedronGeometry.h
     Graphics/Geometries/TorusKnotGeometry.cpp
     Graphics/Geometries/TorusKnotGeometry.h
 
