Refactor to LatheGeometry

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -61,6 +61,8 @@ add_library(oscar STATIC
     Graphics/Geometries/DodecahedronGeometry.h
     Graphics/Geometries/IcosahedronGeometry.cpp
     Graphics/Geometries/IcosahedronGeometry.h
+    Graphics/Geometries/LatheGeometry.cpp
+    Graphics/Geometries/LatheGeometry.h
     Graphics/Geometries/OctahedronGeometry.cpp
     Graphics/Geometries/OctahedronGeometry.h
     Graphics/Geometries/PolyhedronGeometry.cpp
