Refactor to AABBGeometry

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -55,6 +55,8 @@ add_library(oscar STATIC
     Graphics/Detail/VertexAttributeList.h
     Graphics/Detail/VertexAttributeTraits.h
 
+    Graphics/Geometries/AABBGeometry.cpp
+    Graphics/Geometries/AABBGeometry.h
     Graphics/Geometries/BoxGeometry.cpp
     Graphics/Geometries/BoxGeometry.h
     Graphics/Geometries/CircleGeometry.cpp
