Refactor some algorithm uses over to osc:: constrained versions

--- a/tests/testoscar/CMakeLists.txt
+++ b/tests/testoscar/CMakeLists.txt
@@ -27,6 +27,7 @@ add_executable(testoscar
     Graphics/TestGeometries.cpp
     Graphics/TestSubMeshDescriptor.cpp
     Graphics/TestMesh.cpp
+    Graphics/TestMeshIndicesView.cpp
     Graphics/TestMeshUpdateFlags.cpp
     Graphics/TestRenderer.cpp
     Graphics/TestRenderTarget.cpp
