Begin to add FrustrumCulling demo impl

--- a/src/oscar/CMakeLists.txt
+++ b/src/oscar/CMakeLists.txt
@@ -334,6 +334,7 @@ add_library(oscar STATIC
     UI/ImGuizmoHelpers.h
     UI/imgui_impl_sdl2.cpp
     UI/imgui_impl_sdl2.h
+    UI/MouseCapturingCamera.h
     UI/oscimgui.h
     UI/oscimgui_internal.h
     UI/oscimgui_config.h
