--- a/src/oscar_demos/CMakeLists.txt
+++ b/src/oscar_demos/CMakeLists.txt
@@ -4,6 +4,8 @@ add_library(oscar_demos STATIC
     CookiecutterScreen.h
     CustomWidgetsTab.cpp
     CustomWidgetsTab.h
+    FrustrumCullingTab.cpp
+    FrustrumCullingTab.h
     HittestTab.cpp
     HittestTab.h
     ImGuiDemoTab.cpp
